# new_project_creator

./: .gitignore  LICENSE  README.md  setup.cfg
src/new_project/: cli.py  constants.py
