[metadata]
name = new-project
version = 0.0.1
description = Setups files and folder for a new project
author = Benoit Sierro
author_email = benoit.sierro@iap.unibe.ch
long_description = file: README.md
long_description_content_type = text/markdown
keywords = automatic setup meta
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
package_dir = 
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    new-project = new_project.cli:main
